# astro-ai

./: .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  BACKEND_INTEGRATION.md  FRONTEND_FOUNDATION_SUMMARY.md  REFERENCE_TEST_SUITE.md  VALIDATION_REPORT.md  VALIDATION_TEST_SUITE.md  simple_test.py
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.swarm/: memory.db-shm  memory.db-wal  schema.sql  state.json
.ui-design/: design-system.json  setup_state.json
astrology-engine/: DEBUG_REPORT.md  ENGINE_STATUS.md  IMPORT_STRATEGY.md  NAKSHATRA_BOUNDARY_SPEC.md  PACKAGE_ARCHITECTURE_REPORT.md  SAMPLE_OUTPUT.md  SUMMARY.md  pyproject.toml  requirements.txt  simple_test.py
astrology-engine/.claude-flow/data/: pending-insights.jsonl
astrology-engine/examples/: validation_demo.py
astrology-engine/src/astrology_engine.egg-info/: SOURCES.txt  requires.txt  top_level.txt
astrology-engine/src/astrology_engine/charts/: __init__.py  base.py
astrology-engine/src/astrology_engine/core/: __init__.py  config.py  exceptions.py  models.py
astrology-engine/src/astrology_engine/divisional/: __init__.py  service.py
astrology-engine/src/astrology_engine/utils/: __init__.py  calculations.py  coordinates.py
astrology-engine/tests/: __init__.py  test_calculations.py
astropy-engine/: FINAL_SUMMARY.md
backend/: .env  astrology.db  requirements.txt
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts  tailwind.config.ts.backup
tests/: test_api.py  test_astrology_integration.py  test_deterministic_validation.py
(+59 files in other folders)
